[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/misc/drone/drone-3.png" type="Texture" id=1]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/misc/drone/drone-1.png" type="Texture" id=2]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/misc/drone/drone-2.png" type="Texture" id=3]
[ext_resource path="res://Textures/Platformer_Assets/warped city files/SPRITES/misc/drone/drone-4.png" type="Texture" id=4]
[ext_resource path="res://GameScenes/Platform/Enemy/Enemy.gd" type="Script" id=5]
[ext_resource path="res://GameScenes/Platform/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameScenes/CommonAssets/Stats.tscn" type="PackedScene" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": false,
"name": "drone_turn",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "drone",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.65885

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.0938
height = 21.1264

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 32, 176 )
z_index = 1
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.225937, 0 )
frames = SubResource( 1 )
animation = "drone"
playing = true

[node name="LaserOrigin" type="Position2D" parent="."]
position = Vector2( -18.8221, 7.91018 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.98276, 22.5571 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 2.98276, 2.79634 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 10
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
